--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "codegen": "graphql-codegen"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.9",
+    "@apollo/client": "^3.6.8",
+    "@vime/core": "^5.3.1",
+    "@vime/react": "^5.3.1",
     "graphql": "^16.5.0",
+    "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.6.2",
